tests/ui/imports/ambiguous-16.stderr
error: `ConfirmedTranscriptHashInput` is ambiguous
  --> $DIR/ambiguous-16.rs:22:21
   |
LL | use crate::framing::ConfirmedTranscriptHashInput;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `ConfirmedTranscriptHashInput` could refer to the struct imported here
  --> $DIR/ambiguous-16.rs:18:13
   |
LL |     pub use self::public_message::*;
   |             ^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `ConfirmedTranscriptHashInput` to disambiguate
note: `ConfirmedTranscriptHashInput` could also refer to the struct imported here
  --> $DIR/ambiguous-16.rs:19:13
   |
LL |     pub use self::public_message_in::*;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `ConfirmedTranscriptHashInput` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `ConfirmedTranscriptHashInput` is ambiguous
  --> $DIR/ambiguous-16.rs:22:21
   |
LL | use crate::framing::ConfirmedTranscriptHashInput;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `ConfirmedTranscriptHashInput` could refer to the struct imported here
  --> $DIR/ambiguous-16.rs:18:13
   |
LL |     pub use self::public_message::*;
   |             ^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `ConfirmedTranscriptHashInput` to disambiguate
note: `ConfirmedTranscriptHashInput` could also refer to the struct imported here
  --> $DIR/ambiguous-16.rs:19:13
   |
LL |     pub use self::public_message_in::*;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `ConfirmedTranscriptHashInput` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

